feat: re-do landing page and few layouts, including nav bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@media (max-width: 1024px) {
+  .-left-12,
+  .-right-12 {
+    left: 1rem;
+    right: 1rem;
+  }
+}
